Reverse proxy not included. Should be configured using traefik.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,6 @@
 version: '2'
 
 services:
-  load-balancer:
-    image: traefik:v1.7.11
-    container_name: load-balancer
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-      - "8080:8080"
-    environment:
-      - CF_API_EMAIL=${CLOUDFLARE_EMAIL}
-      - CF_API_KEY=${CLOUDFLARE_API_KEY}
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ${STORAGE_LOCATION}/traefik:/etc/traefik
-      - ./traefik.toml:/traefik.toml
-      - ./acme.json:/acme.json
-    labels:
-      - "traefik.enable=true"
-      - "traefik.port=8080"
-      - "traefik.backend=traefik"
-      - "traefik.frontend.entryPoints=http,https"
-      - "traefik.frontend.rule=Host:traefik.${DOMAIN_URL}"
-
   transmission:
     image: "linuxserver/transmission"
     container_name: transmission
@@ -43,10 +20,13 @@ services:
       - "51413:51413/udp"
     labels:
       - "traefik.enable=true"
+      - "traefik.docker.network=main"
       - "traefik.port=9091"
       - "traefik.backend=transmission"
       - "traefik.frontend.entryPoints=http,https"
       - "traefik.frontend.rule=Host:transmission.${DOMAIN_URL}"
+    networks:
+      - main
 
   jackett:
     image: "linuxserver/jackett"
@@ -64,11 +44,14 @@ services:
       - "9117:9117"
     labels:
       - "traefik.enable=true"
+      - "traefik.docker.network=main"
       - "traefik.port=9117"
       - "traefik.backend=jackett"
       - "traefik.frontend.entryPoints=http,https"
       - "traefik.frontend.rule=Host:jackett.${DOMAIN_URL}"
       - "traefik.basic.protocol=https"
+    networks:
+      - main
 
   plex:
     image: "plexinc/pms-docker"
@@ -99,10 +82,13 @@ services:
       - /tmp:/tmp
     labels:
       - "traefik.enable=true"
+      - "traefik.docker.network=main"
       - "traefik.port=32400"
       - "traefik.backend=plex"
       - "traefik.frontend.entryPoints=http,https"
       - "traefik.frontend.rule=Host:plex.${DOMAIN_URL}"
+    networks:
+      - main
 
 
   sonarr:
@@ -123,10 +109,13 @@ services:
      - VIRTUAL_HOST=sonarr.${DOMAIN_URL}
     labels:
       - "traefik.enable=true"
+      - "traefik.docker.network=main"
       - "traefik.port=8989"
       - "traefik.backend=sonarr"
       - "traefik.frontend.entryPoints=http,https"
       - "traefik.frontend.rule=Host:sonarr.${DOMAIN_URL}"
+    networks:
+      - main
 
   radarr:
     image: "linuxserver/radarr"
@@ -146,7 +135,14 @@ services:
      - VIRTUAL_HOST=radarr.${DOMAIN_URL}
     labels:
       - "traefik.enable=true"
+      - "traefik.docker.network=main"
       - "traefik.port=7878"
       - "traefik.backend=radarr"
       - "traefik.frontend.entryPoints=http,https"
       - "traefik.frontend.rule=Host:radarr.${DOMAIN_URL}"
+    networks:
+      - main
+
+networks:
+  main:
+    external: true
