--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -143,6 +143,24 @@ services:
     networks:
       - main
 
+  deezldr:
+    image: bocki/deezloaderrmx
+    container_name: deezldr
+    environmnet:
+      PUID: 1000
+      PGID: 1000
+    volumes:
+      - "${STORAGE_LOCATION}/deezldr/config:/config"
+      - "${STORAGE_LOCATION}/deezldr/music:/downloads"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.port=1730"
+      - "traefik.backend=deezeldr"
+      - "traefik.frontend.entryPoints=http,https"
+      - "traefik.frontend.rule=Host:music.${DOMAIN_URL}"
+    networks:
+      - main
+
 networks:
   main:
     external: true
