--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,7 @@ services:
     volumes:
       - "${STORAGE_LOCATION}/plex:/config"
       - "${STORAGE_LOCATION}/sonarr/tvseries:/tv"
+      - "${STORAGE_LOCATION}/deezldr/music"
       - "${STORAGE_LOCATION}/radarr/movies:/movies"
       - "${STORAGE_LOCATION}/plex:/transcode"
       - "${STORAGE_LOCATION}/library:/library"
