edited settings for no seeding

--- a/transmission/settings.json
+++ b/transmission/settings.json
@@ -20,7 +20,7 @@
     "idle-seeding-limit-enabled": true,
     "incomplete-dir": "/downloads/incomplete",
     "incomplete-dir-enabled": true,
-    "lpd-enabled": false,
+    "lpd-enabled": true,
     "message-level": 2,
     "peer-congestion-algorithm": "",
     "peer-id-ttl-hours": 6,
@@ -37,7 +37,7 @@
     "prefetch-enabled": true,
     "queue-stalled-enabled": true,
     "queue-stalled-minutes": 30,
-    "ratio-limit": 0.1000,
+    "ratio-limit": 0,
     "ratio-limit-enabled": true,
     "rename-partial-files": true,
     "rpc-authentication-required": true,
