--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
+      - TRANSMISSION_WEB_HOME=/combustion-release/
     ports:
-      - "9091:9091"
       - "51413:51413"
       - "51413:51413/udp"
     networks:
