--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -172,6 +172,30 @@ services:
     networks:
       - main
 
+  bazarr:
+    image: linuxserver/bazarr:latest
+    container_name: bazarr
+    environment:
+      PUID: 1000
+      PGID: 1000
+      TZ: 'America/Argentina/Buenos_Aires'
+    restart: unless-stopped
+    volumes:
+      - ${STORAGE_LOCATION}/bazarr/config:/config
+      - ${STORAGE_LOCATION}/radarr/movies:/movies
+      - ${STORAGE_LOCATION}/sonarr/tv:/tv
+    labels:
+      - "traefik.enable=true"
+      - "traefik.port=6767"
+      - "traefik.backend=bazarr"
+      - "traefik.frontend.entryPoints=http,https"
+      - "traefik.frontend.rule=Host:bazarr.${DOMAIN_URL}"
+      - "traefik.frontend.auth.forward.address=https://auth.${DOMAIN_URL}"
+      - "traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User"
+      - "traefik.frontend.auth.forward.trustForwardHeader=true"
+    networks:
+      - main
+
 networks: 
   main:
     external: true
