--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -152,9 +152,9 @@ services:
       - "traefik.backend=radarr"
       - "traefik.frontend.entryPoints=http,https"
       - "traefik.frontend.rule=Host:radarr.${DOMAIN_URL}"
-      # - traefik.frontend.auth.forward.address=https://auth.${DOMAIN_URL}
-      # - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
-      # - traefik.frontend.auth.forward.trustForwardHeader=true
+      - traefik.frontend.auth.forward.address=https://auth.${DOMAIN_URL}
+      - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
+      - traefik.frontend.auth.forward.trustForwardHeader=true
 
   kitana:
     image: pannal/kitana
