added transmission updated settings

--- a/transmission/settings.json
+++ b/transmission/settings.json
@@ -16,7 +16,7 @@
     "download-queue-enabled": true,
     "download-queue-size": 5,
     "encryption": 1,
-    "idle-seeding-limit": 1,
+    "idle-seeding-limit": 0,
     "idle-seeding-limit-enabled": true,
     "incomplete-dir": "/downloads/incomplete",
     "incomplete-dir-enabled": true,
@@ -24,8 +24,8 @@
     "message-level": 2,
     "peer-congestion-algorithm": "",
     "peer-id-ttl-hours": 6,
-    "peer-limit-global": 200,
-    "peer-limit-per-torrent": 50,
+    "peer-limit-global": 1000,
+    "peer-limit-per-torrent": 150,
     "peer-port": 51413,
     "peer-port-random-high": 65535,
     "peer-port-random-low": 49152,
@@ -40,15 +40,17 @@
     "ratio-limit": 0,
     "ratio-limit-enabled": true,
     "rename-partial-files": true,
-    "rpc-authentication-required": true,
+    "rpc-authentication-required": false,
     "rpc-bind-address": "0.0.0.0",
     "rpc-enabled": true,
-    "rpc-password": "1A2B3C4E",
+    "rpc-host-whitelist": "*",
+    "rpc-host-whitelist-enabled": true,
+    "rpc-password": "{d574f213213fc58ae68b20d9eb3d5764016646b4bWIBfP6V",
     "rpc-port": 9091,
     "rpc-url": "/transmission/",
     "rpc-username": "admin",
     "rpc-whitelist": "*",
-    "rpc-whitelist-enabled": false,
+    "rpc-whitelist-enabled": true,
     "scrape-paused-torrents-enabled": true,
     "script-torrent-done-enabled": false,
     "script-torrent-done-filename": "",
