--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,8 +99,7 @@ services:
     volumes:
      - "/etc/localtime:/etc/localtime:ro"
      - "${STORAGE_LOCATION}/sonarr/config:/config"
-     - "${STORAGE_LOCATION}/sonarr/tvseries:/tv"
-     - "${STORAGE_LOCATION}/transmission/downloads:/downloads"
+     - "${STORAGE_LOCATION}:/docker"
     environment:
      - PUID=${PUID}
      - PGID=${PGID}
@@ -126,8 +125,7 @@ services:
     volumes:
       - "/etc/localtime:/etc/localtime:ro"
       - "${STORAGE_LOCATION}/radarr/config:/config"
-      - "${STORAGE_LOCATION}/radarr/movies:/movies"
-      - "${STORAGE_LOCATION}/transmission/downloads:/downloads"
+      - "${STORAGE_LOCATION}:/docker"
     environment:
      - PUID=${PUID}
      - PGID=${PGID}
@@ -171,8 +169,7 @@ services:
     restart: unless-stopped
     volumes:
       - ${STORAGE_LOCATION}/bazarr/config:/config
-      - ${STORAGE_LOCATION}/radarr/movies:/movies
-      - ${STORAGE_LOCATION}/sonarr/tvseries:/tv
+      - ${STORAGE_LOCATION}:/docker
     labels:
       - "traefik.enable=true"
       - "traefik.port=6767"
