--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,6 @@ services:
     restart: unless-stopped
     volumes:
       - "${STORAGE_LOCATION}/jackett/config:/config"
-      - "${STORAGE_LOCATION}/transmission/downloads:/downloads"
       - "/etc/localtime:/etc/localtime:ro"
     environment:
       - PUID=${PUID}
@@ -66,7 +65,7 @@ services:
      - "/etc/localtime:/etc/localtime:ro"
      - "${STORAGE_LOCATION}/sonarr/config:/config"
      - "${STORAGE_LOCATION}:/docker"
-     - ${MEDIA_LOCATION}:/media
+     - /mnt/media:/media
     environment:
      - PUID=${PUID}
      - PGID=${PGID}
@@ -93,7 +92,7 @@ services:
       - "/etc/localtime:/etc/localtime:ro"
       - "${STORAGE_LOCATION}/radarr/config:/config"
       - "${STORAGE_LOCATION}:/docker"
-      - ${MEDIA_LOCATION}:/media
+      - /mnt/media:/media
     environment:
      - PUID=${PUID}
      - PGID=${PGID}
@@ -121,7 +120,7 @@ services:
     restart: unless-stopped
     volumes:
       - ${STORAGE_LOCATION}/bazarr/config:/config
-      - ${MEDIA_LOCATION}:/media
+      - /mnt/media:/media
     labels:
       - "traefik.enable=true"
       - "traefik.port=6767"
@@ -143,7 +142,7 @@ services:
       - TZ=${DOCKER_TZ}
     volumes:
       - ${STORAGE_LOCATION}/nzbhydra:/config
-      - ${MEDIA_LOCATION}:/media
+      - /mnt/watch:/watch
     labels:
       - "traefik.enable=true"
       - "traefik.port=5076"
@@ -168,7 +167,7 @@ services:
     volumes:
       - ${STORAGE_LOCATION}/qbittorrent:/config
       - ${STORAGE_LOCATION}/qbittorrent/downloads:/downloads
-      - ${MEDIA_LOCATION}:/media
+      - /mnt/watch:/watch
     labels:
       - "traefik.enable=true"
       - "traefik.port=8080"
