--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -193,6 +193,33 @@ services:
       - 49122:49122/udp
     restart: unless-stopped
 
+  nzbget:
+    image: ghcr.io/linuxserver/nzbget
+    container_name: nzbget
+    environment:
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${DOCKER_TZ}
+    volumes:
+      - ${STORAGE_LOCATION}/nzbget/config:/config
+      - ${STORAGE_LOCATION}/nzbget/downloads:/downloads
+      - /mnt/watch:/watch
+    ports:
+      - 6789:6789
+    labels:
+      - "traefik.enable=true"
+      - "traefik.port=6789"
+      - "traefik.backend=nzbget"
+      - "traefik.frontend.entryPoints=http,https"
+      - "traefik.frontend.rule=Host:nzbget.${DOMAIN_URL}"
+      - "traefik.frontend.auth.forward.address=${OAUTH_FORWARD_URL}"
+      - "traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User"
+      - "traefik.frontend.auth.forward.trustForwardHeader=true"
+      - "group=mediaserver"
+    networks:
+      - main
+    restart: unless-stopped
+
 networks: 
   main:
     external: true
