--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3.8'
 
 services:
   jackett:
@@ -19,13 +19,11 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=main"
-      - "traefik.port=9117"
-      - "traefik.backend=jackett"
-      - "traefik.frontend.entryPoints=http,https"
-      - "traefik.frontend.rule=Host:jackett.${DOMAIN_URL}"
-      - traefik.frontend.auth.forward.address=${OAUTH_FORWARD_URL}
-      - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
-      - traefik.frontend.auth.forward.trustForwardHeader=true
+      - "traefik.http.routers.jackett.rule=Host(`jackett.${DOMAIN_URL}`)"
+      - "traefik.http.routers.jackett.tls=true"
+      - "traefik.http.routers.jackett.entrypoints=websecure,web"
+      - "traefik.http.routers.jackett.middlewares=traefik-forward-auth,tls-headers"
+      - "traefik.http.services.jackett.loadbalancer.server.port=9117"
       - "group=mediaserver"
 
   plex:
@@ -49,6 +47,13 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=main"
+      - "traefik.http.routers.plex.rule=Host(`plex.${DOMAIN_URL}`)"
+      - "traefik.http.routers.plex.tls=true"
+      - "traefik.http.routers.plex.entrypoints=websecure,web"
+      - "traefik.http.routers.plex.middlewares=traefik-forward-auth,tls-headers"
+      - "traefik.http.services.plex.loadbalancer.server.port=32400"
+      - "traefik.enable=true"
+      - "traefik.docker.network=main"
       - "traefik.port=32400"
       - "traefik.backend=plex"
       - "traefik.frontend.entryPoints=http,https"
@@ -57,23 +62,29 @@ services:
     networks:
       - main
 
-
   sonarr:
     image: "linuxserver/sonarr"
     container_name: sonarr
     hostname: sonarr
     restart: unless-stopped
     volumes:
-     - "/etc/localtime:/etc/localtime:ro"
-     - "${STORAGE_LOCATION}/sonarr/config:/config"
-     - "${STORAGE_LOCATION}:/docker"
-     - ${MEDIA_LOCATION}:/media
-     - /mnt/watch:/watch
+      - "/etc/localtime:/etc/localtime:ro"
+      - "${STORAGE_LOCATION}/sonarr/config:/config"
+      - "${STORAGE_LOCATION}:/docker"
+      - ${MEDIA_LOCATION}:/media
+      - /mnt/watch:/watch
     environment:
-     - PUID=${PUID}
-     - PGID=${PGID}
-     - VIRTUAL_HOST=sonarr.${DOMAIN_URL}
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - VIRTUAL_HOST=sonarr.${DOMAIN_URL}
     labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=main"
+      - "traefik.http.routers.sonarr.rule=Host(`sonarr.${DOMAIN_URL}`)"
+      - "traefik.http.routers.sonarr.tls=true"
+      - "traefik.http.routers.sonarr.entrypoints=websecure,web"
+      - "traefik.http.routers.sonarr.middlewares=traefik-forward-auth,tls-headers"
+      - "traefik.http.services.sonarr.loadbalancer.server.port=8989"
       - "traefik.enable=true"
       - "traefik.docker.network=main"
       - "traefik.port=8989"
@@ -86,7 +97,7 @@ services:
       - "group=mediaserver"
     networks:
       - main
-      
+
   radarr:
     image: "linuxserver/radarr"
     container_name: radarr
@@ -99,12 +110,19 @@ services:
       - ${MEDIA_LOCATION}:/media
       - /mnt/watch:/watch
     environment:
-     - PUID=${PUID}
-     - PGID=${PGID}
-     - VIRTUAL_HOST=radarr.${DOMAIN_URL}
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - VIRTUAL_HOST=radarr.${DOMAIN_URL}
     networks:
       - main
     labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=main"
+      - "traefik.http.routers.radarr.rule=Host(`radarr.${DOMAIN_URL}`)"
+      - "traefik.http.routers.radarr.tls=true"
+      - "traefik.http.routers.radarr.entrypoints=websecure,web"
+      - "traefik.http.routers.radarr.middlewares=traefik-forward-auth,tls-headers"
+      - "traefik.http.services.radarr.loadbalancer.server.port=7878"
       - "traefik.enable=true"
       - "traefik.docker.network=main"
       - "traefik.port=7878"
@@ -129,6 +147,13 @@ services:
       - ${MEDIA_LOCATION}:/media
     labels:
       - "traefik.enable=true"
+      - "traefik.docker.network=main"
+      - "traefik.http.routers.bazarr.rule=Host(`bazarr.${DOMAIN_URL}`)"
+      - "traefik.http.routers.bazarr.tls=true"
+      - "traefik.http.routers.bazarr.entrypoints=websecure,web"
+      - "traefik.http.routers.bazarr.middlewares=traefik-forward-auth,tls-headers"
+      - "traefik.http.services.bazarr.loadbalancer.server.port=6767"
+      - "traefik.enable=true"
       - "traefik.port=6767"
       - "traefik.backend=bazarr"
       - "traefik.frontend.entryPoints=http,https"
@@ -151,6 +176,13 @@ services:
       - ${STORAGE_LOCATION}/nzbhydra:/config
       - /mnt/watch:/watch
     labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=main"
+      - "traefik.http.routers.nzbhydra.rule=Host(`nzbhydra.${DOMAIN_URL}`)"
+      - "traefik.http.routers.nzbhydra.tls=true"
+      - "traefik.http.routers.nzbhydra.entrypoints=websecure,web"
+      - "traefik.http.routers.nzbhydra.middlewares=traefik-forward-auth,tls-headers"
+      - "traefik.http.services.nzbhydra.loadbalancer.server.port=5076"
       - "traefik.enable=true"
       - "traefik.port=5076"
       - "traefik.backend=nzbhydra"
@@ -177,6 +209,13 @@ services:
       - ${STORAGE_LOCATION}/qbittorrent/downloads:/downloads
       - /mnt/watch:/watch
     labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=main"
+      - "traefik.http.routers.qbt.rule=Host(`qbt.${DOMAIN_URL}`)"
+      - "traefik.http.routers.qbt.tls=true"
+      - "traefik.http.routers.qbt.entrypoints=websecure,web"
+      - "traefik.http.routers.qbt.middlewares=traefik-forward-auth,tls-headers"
+      - "traefik.http.services.qbt.loadbalancer.server.port=8080"
       - "traefik.enable=true"
       - "traefik.port=8080"
       - "traefik.backend=qbt"
@@ -206,6 +245,13 @@ services:
       - /mnt/watch:/watch
     labels:
       - "traefik.enable=true"
+      - "traefik.docker.network=main"
+      - "traefik.http.routers.nzbget.rule=Host(`nzbget.${DOMAIN_URL}`)"
+      - "traefik.http.routers.nzbget.tls=true"
+      - "traefik.http.routers.nzbget.entrypoints=websecure,web"
+      - "traefik.http.routers.nzbget.middlewares=traefik-forward-auth,tls-headers"
+      - "traefik.http.services.nzbget.loadbalancer.server.port=6789"
+      - "traefik.enable=true"
       - "traefik.port=6789"
       - "traefik.backend=nzbget"
       - "traefik.frontend.entryPoints=http,https"
@@ -218,9 +264,6 @@ services:
       - main
     restart: unless-stopped
 
-networks: 
+networks:
   main:
     external: true
-
-
-
