--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,18 +14,15 @@ services:
       - PGID=${PGID}
     networks:
       - main
-    ports:
-      - "9117:9117"
     labels:
       - "traefik.enable=true"
+      - "traefik.http.routers.jackett.rule=Host(`jackett.${DOMAIN_URL}`)"
+      - "traefik.http.routers.jackett.tls=true"
+      - "traefik.http.routers.jackett.tls.certresolver=myresolver"
       - "traefik.docker.network=main"
-      - "traefik.port=9117"
-      - "traefik.backend=jackett"
-      - "traefik.frontend.entryPoints=http,https"
-      - "traefik.frontend.rule=Host:jackett.${DOMAIN_URL}"
-      - traefik.frontend.auth.forward.address=${OAUTH_FORWARD_URL}
-      - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
-      - traefik.frontend.auth.forward.trustForwardHeader=true
+      - "traefik.http.routers.jackett.entrypoints=websecure,web"
+      - "traefik.http.routers.jackett.middlewares=traefik-forward-auth,tls-headers"
+      - "traefik.http.services.jackett.loadbalancer.server.port=7171"
       - "group=mediaserver"
 
   plex:
@@ -44,15 +41,17 @@ services:
     volumes:
       - "${STORAGE_LOCATION}/plex:/config"
       - "${STORAGE_LOCATION}/plex:/transcode"
-      - ${MEDIA_LOCATION}:/media
+      - ${MEDIA_LOCATION}:/media:ro
       - /tmp:/tmp
     labels:
       - "traefik.enable=true"
+      - "traefik.http.routers.plex.rule=Host(`plex.${DOMAIN_URL}`)"
+      - "traefik.http.routers.plex.tls=true"
+      - "traefik.http.routers.plex.tls.certresolver=myresolver"
       - "traefik.docker.network=main"
-      - "traefik.port=32400"
-      - "traefik.backend=plex"
-      - "traefik.frontend.entryPoints=http,https"
-      - "traefik.frontend.rule=Host:plex.${DOMAIN_URL}"
+      - "traefik.http.routers.plex.entrypoints=websecure,web"
+      - "traefik.http.routers.plex.middlewares=tls-headers"
+      - "traefik.http.services.plex.loadbalancer.server.port=32400"
       - "group=mediaserver"
     networks:
       - main
@@ -67,7 +66,7 @@ services:
      - "/etc/localtime:/etc/localtime:ro"
      - "${STORAGE_LOCATION}/sonarr/config:/config"
      - "${STORAGE_LOCATION}:/docker"
-     - ${MEDIA_LOCATION}:/media
+     - ${MEDIA_LOCATION}:/media:ro
      - /mnt/watch:/watch
     environment:
      - PUID=${PUID}
@@ -75,14 +74,13 @@ services:
      - VIRTUAL_HOST=sonarr.${DOMAIN_URL}
     labels:
       - "traefik.enable=true"
+      - "traefik.http.routers.sonarr.rule=Host(`sonarr.${DOMAIN_URL}`)"
+      - "traefik.http.routers.sonarr.tls=true"
+      - "traefik.http.routers.sonarr.tls.certresolver=myresolver"
       - "traefik.docker.network=main"
-      - "traefik.port=8989"
-      - "traefik.backend=sonarr"
-      - "traefik.frontend.entryPoints=http,https"
-      - "traefik.frontend.rule=Host:sonarr.${DOMAIN_URL}"
-      - traefik.frontend.auth.forward.address=${OAUTH_FORWARD_URL}
-      - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
-      - traefik.frontend.auth.forward.trustForwardHeader=true
+      - "traefik.http.routers.sonarr.entrypoints=websecure,web"
+      - "traefik.http.routers.sonarr.middlewares=traefik-forward-auth,tls-headers"
+      - "traefik.http.services.sonarr.loadbalancer.server.port=8989"
       - "group=mediaserver"
     networks:
       - main
@@ -96,7 +94,7 @@ services:
       - "/etc/localtime:/etc/localtime:ro"
       - "${STORAGE_LOCATION}/radarr/config:/config"
       - "${STORAGE_LOCATION}:/docker"
-      - ${MEDIA_LOCATION}:/media
+      - ${MEDIA_LOCATION}:/media:ro
       - /mnt/watch:/watch
     environment:
      - PUID=${PUID}
@@ -106,14 +104,13 @@ services:
       - main
     labels:
       - "traefik.enable=true"
+      - "traefik.http.routers.radarr.rule=Host(`radarr.${DOMAIN_URL}`)"
+      - "traefik.http.routers.radarr.tls=true"
+      - "traefik.http.routers.radarr.tls.certresolver=myresolver"
       - "traefik.docker.network=main"
-      - "traefik.port=7878"
-      - "traefik.backend=radarr"
-      - "traefik.frontend.entryPoints=http,https"
-      - "traefik.frontend.rule=Host:radarr.${DOMAIN_URL}"
-      - traefik.frontend.auth.forward.address=${OAUTH_FORWARD_URL}
-      - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
-      - traefik.frontend.auth.forward.trustForwardHeader=true
+      - "traefik.http.routers.radarr.entrypoints=websecure,web"
+      - "traefik.http.routers.radarr.middlewares=traefik-forward-auth,tls-headers"
+      - "traefik.http.services.radarr.loadbalancer.server.port=7878"
       - "group=mediaserver"
 
   bazarr:
@@ -126,16 +123,16 @@ services:
     restart: unless-stopped
     volumes:
       - ${STORAGE_LOCATION}/bazarr/config:/config
-      - ${MEDIA_LOCATION}:/media
+      - ${MEDIA_LOCATION}:/media:ro
     labels:
       - "traefik.enable=true"
-      - "traefik.port=6767"
-      - "traefik.backend=bazarr"
-      - "traefik.frontend.entryPoints=http,https"
-      - "traefik.frontend.rule=Host:bazarr.${DOMAIN_URL}"
-      - "traefik.frontend.auth.forward.address=${OAUTH_FORWARD_URL}"
-      - "traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User"
-      - "traefik.frontend.auth.forward.trustForwardHeader=true"
+      - "traefik.http.routers.bazarr.rule=Host(`bazarr.${DOMAIN_URL}`)"
+      - "traefik.http.routers.bazarr.tls=true"
+      - "traefik.http.routers.bazarr.tls.certresolver=myresolver"
+      - "traefik.docker.network=main"
+      - "traefik.http.routers.bazarr.entrypoints=websecure,web"
+      - "traefik.http.routers.bazarr.middlewares=traefik-forward-auth,tls-headers"
+      - "traefik.http.services.bazarr.loadbalancer.server.port=6767"
       - "group=mediaserver"
     networks:
       - main
@@ -152,77 +149,78 @@ services:
       - /mnt/watch:/watch
     labels:
       - "traefik.enable=true"
-      - "traefik.port=5076"
-      - "traefik.backend=nzbhydra"
-      - "traefik.frontend.entryPoints=http,https"
-      - "traefik.frontend.rule=Host:nzbhydra.${DOMAIN_URL}"
-      - "traefik.frontend.auth.forward.address=${OAUTH_FORWARD_URL}"
-      - "traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User"
-      - "traefik.frontend.auth.forward.trustForwardHeader=true"
+      - "traefik.http.routers.nzbhydra.rule=Host(`nzbhydra.${DOMAIN_URL}`)"
+      - "traefik.http.routers.nzbhydra.tls=true"
+      - "traefik.http.routers.nzbhydra.tls.certresolver=myresolver"
+      - "traefik.docker.network=main"
+      - "traefik.http.routers.nzbhydra.entrypoints=websecure,web"
+      - "traefik.http.routers.nzbhydra.middlewares=traefik-forward-auth,tls-headers"
+      - "traefik.http.services.nzbhydra.loadbalancer.server.port=5076"
       - "group=mediaserver"
     networks:
       - main
     restart: unless-stopped
 
-  qbittorrent:
-    image: linuxserver/qbittorrent:14.3.2.99202012272006-7195-abb854a1eubuntu18.04.1-ls107
-    container_name: qbittorrent
-    environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${DOCKER_TZ}
-      - WEBUI_PORT=8080
-    volumes:
-      - ${STORAGE_LOCATION}/qbittorrent:/config
-      - ${STORAGE_LOCATION}/qbittorrent/downloads:/downloads
-      - /mnt/watch:/watch
-    labels:
-      - "traefik.enable=true"
-      - "traefik.port=8080"
-      - "traefik.backend=qbt"
-      - "traefik.frontend.entryPoints=http,https"
-      - "traefik.frontend.rule=Host:qbt.${DOMAIN_URL}"
-      - "traefik.frontend.auth.forward.address=${OAUTH_FORWARD_URL}"
-      - "traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User"
-      - "traefik.frontend.auth.forward.trustForwardHeader=true"
-      - "group=mediaserver"
-    networks:
-      - main
-    ports:
-      - 49122:49122
-      - 49122:49122/udp
-    restart: unless-stopped
-    profiles:
-      - downloader
+# qbittorrent:
+#   image: linuxserver/qbittorrent:14.3.2.99202012272006-7195-abb854a1eubuntu18.04.1-ls107
+#   container_name: qbittorrent
+#   environment:
+#     - PUID=${PUID}
+#     - PGID=${PGID}
+#     - TZ=${DOCKER_TZ}
+#     - WEBUI_PORT=8080
+#   volumes:
+#     - ${STORAGE_LOCATION}/qbittorrent:/config
+#     - ${STORAGE_LOCATION}/qbittorrent/downloads:/downloads
+#     - /mnt/watch:/watch
+#   labels:
+#     - "traefik.enable=true"
+#     - "traefik.port=8080"
+#     - "traefik.backend=qbt"
+#     - "traefik.frontend.entryPoints=http,https"
+#     - "traefik.frontend.rule=Host:qbt.${DOMAIN_URL}"
+#     - "traefik.frontend.auth.forward.address=${OAUTH_FORWARD_URL}"
+#     - "traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User"
+#     - "traefik.frontend.auth.forward.trustForwardHeader=true"
+#     - "group=mediaserver"
+#   networks:
+#     - main
+#   ports:
+#     - 49122:49122
+#     - 49122:49122/udp
+#   restart: unless-stopped
+#   profiles:
+#     - downloader
+#
+# nzbget:
+#   image: ghcr.io/linuxserver/nzbget:version-v21.1
+#   container_name: nzbget
+#   environment:
+#     - PUID=${PUID}
+#     - PGID=${PGID}
+#     - TZ=${DOCKER_TZ}
+#   volumes:
+#     - ${STORAGE_LOCATION}/nzbget/config:/config
+#     - ${STORAGE_LOCATION}/nzbget/downloads:/downloads
+#     - /mnt/watch:/watch
+#   labels:
+#     - "traefik.enable=true"
+#     - "traefik.port=6789"
+#     - "traefik.backend=nzbget"
+#     - "traefik.frontend.entryPoints=http,https"
+#     - "traefik.frontend.rule=Host:nzbget.${DOMAIN_URL}"
+#     - "traefik.frontend.auth.forward.address=${OAUTH_FORWARD_URL}"
+#     - "traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User"
+#     - "traefik.frontend.auth.forward.trustForwardHeader=true"
+#     - "group=mediaserver"
+#   networks:
+#     - main
+#   restart: unless-stopped
+#   profiles:
+#     - downloader
 
-  nzbget:
-    image: ghcr.io/linuxserver/nzbget:version-v21.1
-    container_name: nzbget
-    environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${DOCKER_TZ}
-    volumes:
-      - ${STORAGE_LOCATION}/nzbget/config:/config
-      - ${STORAGE_LOCATION}/nzbget/downloads:/downloads
-      - /mnt/watch:/watch
-    labels:
-      - "traefik.enable=true"
-      - "traefik.port=6789"
-      - "traefik.backend=nzbget"
-      - "traefik.frontend.entryPoints=http,https"
-      - "traefik.frontend.rule=Host:nzbget.${DOMAIN_URL}"
-      - "traefik.frontend.auth.forward.address=${OAUTH_FORWARD_URL}"
-      - "traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User"
-      - "traefik.frontend.auth.forward.trustForwardHeader=true"
-      - "group=mediaserver"
-    networks:
-      - main
-    restart: unless-stopped
-    profiles:
-      - downloader
 
-networks: 
+networks:
   main:
     external: true
 
