--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,9 +65,7 @@ services:
     volumes:
      - "/etc/localtime:/etc/localtime:ro"
      - "${STORAGE_LOCATION}/sonarr/config:/config"
-     - "${STORAGE_LOCATION}:/docker"
-     - ${MEDIA_LOCATION}:/media:ro
-     - /mnt/watch:/watch
+     - ${MEDIA_LOCATION}:/media
     environment:
      - PUID=${PUID}
      - PGID=${PGID}
@@ -93,9 +91,7 @@ services:
     volumes:
       - "/etc/localtime:/etc/localtime:ro"
       - "${STORAGE_LOCATION}/radarr/config:/config"
-      - "${STORAGE_LOCATION}:/docker"
-      - ${MEDIA_LOCATION}:/media:ro
-      - /mnt/watch:/watch
+      - ${MEDIA_LOCATION}:/media
     environment:
      - PUID=${PUID}
      - PGID=${PGID}
@@ -123,7 +119,7 @@ services:
     restart: unless-stopped
     volumes:
       - ${STORAGE_LOCATION}/bazarr/config:/config
-      - ${MEDIA_LOCATION}:/media:ro
+      - ${MEDIA_LOCATION}:/media
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.bazarr.rule=Host(`bazarr.${DOMAIN_URL}`)"
@@ -146,7 +142,7 @@ services:
       - TZ=${DOCKER_TZ}
     volumes:
       - ${STORAGE_LOCATION}/nzbhydra:/config
-      - /mnt/watch:/watch
+      - ${MEDIA_LOCATION}:/media
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.nzbhydra.rule=Host(`nzbhydra.${DOMAIN_URL}`)"
@@ -192,32 +188,31 @@ services:
 #   profiles:
 #     - downloader
 #
-# nzbget:
-#   image: ghcr.io/linuxserver/nzbget:version-v21.1
-#   container_name: nzbget
-#   environment:
-#     - PUID=${PUID}
-#     - PGID=${PGID}
-#     - TZ=${DOCKER_TZ}
-#   volumes:
-#     - ${STORAGE_LOCATION}/nzbget/config:/config
-#     - ${STORAGE_LOCATION}/nzbget/downloads:/downloads
-#     - /mnt/watch:/watch
-#   labels:
-#     - "traefik.enable=true"
-#     - "traefik.port=6789"
-#     - "traefik.backend=nzbget"
-#     - "traefik.frontend.entryPoints=http,https"
-#     - "traefik.frontend.rule=Host:nzbget.${DOMAIN_URL}"
-#     - "traefik.frontend.auth.forward.address=${OAUTH_FORWARD_URL}"
-#     - "traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User"
-#     - "traefik.frontend.auth.forward.trustForwardHeader=true"
-#     - "group=mediaserver"
-#   networks:
-#     - main
-#   restart: unless-stopped
-#   profiles:
-#     - downloader
+  nzbget:
+    image: ghcr.io/linuxserver/nzbget:version-v21.1
+    container_name: nzbget
+    environment:
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${DOCKER_TZ}
+    volumes:
+      - ${STORAGE_LOCATION}/nzbget/config:/config
+      - ${MEDIA_LOCATION}:/media
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.nzbget.rule=Host(`nzbget.${DOMAIN_URL}`)"
+      - "traefik.http.routers.nzbget.tls=true"
+      - "traefik.http.routers.nzbget.tls.certresolver=myresolver"
+      - "traefik.docker.network=main"
+      - "traefik.http.routers.nzbget.entrypoints=websecure,web"
+      - "traefik.http.routers.nzbget.middlewares=traefik-forward-auth,tls-headers"
+      - "traefik.http.services.nzbget.loadbalancer.server.port=5076"
+      - "group=mediaserver"
+    networks:
+      - main
+    restart: unless-stopped
+    profiles:
+      - downloader
 
 
 networks:
